--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 {% include base_path %}
 
-<div class="">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "" }} <a href="" rel="nofollow">Jekyll</a> &amp; <a href="">AcademicPages</a>, <a href="" rel="nofollow"></a>.</div>
+<div class="">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "" }} <a href="" rel="nofollow"></a> &amp; <a href=""></a> <a href="" rel="nofollow"></a></div>
