--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 {% include base_path %}
 
-<div class="">{{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. <a href="" rel="nofollow"></a> <a href=""></a> <a href="" rel="nofollow"></a></div>
+<div class="">{{ site.time | date: '%Y' }} | Ross Edwards | ross@edwardsnetwork.com </div>
