--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -8,6 +8,8 @@ layout: default
   {% include page__hero.html %}
 {% endif %}
 
+<!-- This is a one-line comment -->
+
 <div id="main" role="main">
   <article class="splash" itemscope itemtype="http://schema.org/CreativeWork">
     {% if page.title %}<meta itemprop="headline" content="{{ page.title | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
