--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,6 +2,13 @@
 layout: default
 ---
 
+<style>
+  body {
+    background-color: navy;
+    color: white;
+  }
+</style>
+
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
   {% include page__hero.html %}
 {% endif %}
