--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,9 @@
 <!-- start custom footer snippets -->
 <!--<a href="/sitemap/">Sitemap</a>-->
+<style>
+    body {
+      background-color: #285d93;
+      color: white;
+    }
+  </style>
 <!-- end custom footer snippets -->
