--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,10 @@
 {% include base_path %}
 
+<style>
+    body {
+      background-color: #274865;
+      color: white;
+    }
+  </style>
+
 <div class="">{{ site.time | date: '%Y' }} | Ross Edwards | ross@edwardsnetwork.com </div>
