--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -4,7 +4,7 @@ layout: default
 
 <style>
   body {
-    background-color: #00080f;
+    background-color: #00101e;
     color: white;
   }
 </style>
