--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 {% include base_path %}
 
 <style>
-  .footer {
-    background-color: #274865; /* Footer background color */
-    color: white; /* Text color in the footer */
-  }
-</style>
+    .page__footer {
+      background-color: #274865; /* Footer background color */
+      color: white; /* Text color in the footer */
+    }
+  </style>
 
 <div class="footer">
   {{ site.time | date: '%Y' }} | Ross Edwards | ross@edwardsnetwork.com
