--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 
 <style>
-  .head {
+  .masthead {
     background-color: #274865; /* Footer background color */
     color: white; /* Text color in the footer */
   }
