--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,13 @@
   }
 </style>
 
+<style>
+  .masthead__menu-item {
+    background-color: #274865; /* Footer background color */
+    color: white; /* Text color in the footer */
+  }
+</style>
+
 {% include seo.html %}
 
 <link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
