--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 </style>
 
 <style>
-  .masthead__menu-item {
+  .greedy-nav {
     background-color: #274865; /* Footer background color */
     color: white; /* Text color in the footer */
   }
