--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 </style>
 
 <style>
-  .greedy-nav {
+  .masthead__menu {
     background-color: #274865; /* Footer background color */
     color: white; /* Text color in the footer */
   }
