--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,15 +4,29 @@
 
 <style>
   .masthead {
-    background-color: #274865; /* Footer background color */
-    color: white; /* Text color in the footer */
+    background-color: #274865; /* Header background color */
+    color: white; /* Text color in the header */
   }
 </style>
 
 <style>
   .masthead__inner-wrap {
-    background-color: #274865; /* Footer background color */
-    color: white; /* Text color in the footer */
+    background-color: #274865; /* inner header background color */
+    color: white; /* Text color in the inner header */
+  }
+</style>
+
+<style>
+  .visible-links {
+    background-color: #274865; /* inner header background color */
+    color: white; /* Text color in the inner header */
+  }
+</style>
+
+<style>
+  .masthead__menu{
+    background-color: #274865; /* inner header background color */
+    color: white; /* Text color in the inner header */
   }
 </style>
 
