--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,20 @@
   }
 </style>
 
+<style>
+  .greedy-nav{
+    background-color: #274865; /* inner header background color */
+    color: white; /* Text color in the inner header */
+  }
+</style>
+
+<style>
+  .site-nav{
+    background-color: #274865; /* inner header background color */
+    color: white; /* Text color in the inner header */
+  }
+</style>
+
 {% include seo.html %}
 
 <link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
