--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -21,3 +21,10 @@
     </div>
   </div>
 </div>
+
+<style>
+  .masthead {
+    background-color: #274865; /* Header background color */
+    color: white; /* Text color in the header */
+  }
+</style>
