--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -27,4 +27,21 @@
     background-color: #274865; /* Header background color */
     color: white; /* Text color in the header */
   }
+
+  .masthead__menu {
+    margin: 0; /* Remove any default margin */
+    padding: 0; /* Remove any default padding */
+    list-style: none; /* Remove default list styling */
+  }
+
+  .masthead__menu-item {
+    display: inline-block; /* Display list items horizontally */
+    margin-right: 10px; /* Adjust spacing between list items as needed */
+  }
+
+  .masthead__menu-item a {
+    background-color: #274865; 
+    color: white; /* Text color for links in the navigation bar */
+    text-decoration: none; /* Remove underlines from links */
+  }
 </style>
