--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -28,15 +28,9 @@
     color: white; /* Text color in the header */
   }
 
-  .masthead__menu {
-    margin: 0; /* Remove any default margin */
-    padding: 0; /* Remove any default padding */
-    list-style: none; /* Remove default list styling */
+  .navicon {
+    background-color: #274865; /* Header background color */
+    color: white; /* Text color in the header */
   }
-
-  .masthead__menu-item a {
-    background-color: #274865; 
-    color: white; /* Text color for links in the navigation bar */
-    text-decoration: none; /* Remove underlines from links */
-  }
+  
 </style>
