--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -28,7 +28,7 @@
     color: white; /* Text color in the header */
   }
 
-  .navicon {
+  .masthead__menu-item a {
     background-color: #274865; /* Header background color */
     color: white; /* Text color in the header */
   }
