--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -24,6 +24,8 @@
       }
   
       nav {
+        background-color: #000000; // Same color as the .masthead for a uniform look
+        width: 100%;
         z-index: 10;
       }
   
