--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -22,5 +22,10 @@
   </div>
 </div>
 
-
-
+<style>
+  .masthead__inner-wrap nav {
+    background-color: #274865; /* Footer background color */
+    color: white; /* Text color in the footer */
+    z-index: 10;
+  }
+</style>
