--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -23,6 +23,12 @@
 </div>
 
 <style>
+
+  .masthead {
+    background-color: #274865; /* Footer background color */
+    color: white; /* Text color in the footer */
+  }
+
   .masthead__inner-wrap nav {
     background-color: #274865; /* Footer background color */
     color: white; /* Text color in the footer */
