--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -27,6 +27,11 @@
   .masthead {
     background-color: #274865; /* Footer background color */
     color: white; /* Text color in the footer */
+    border-bottom: '1px solid #fff'; 
+  }
+
+  .masthead__inner-wrap {
+    color: #fff;
   }
 
   .masthead__inner-wrap nav {
