--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -5,7 +5,7 @@
    .masthead {
     position: relative;
     background-color: #274865; // Set your desired background color
-    border-bottom: '1px solid #ffffff'; // Remove border or set to '1px solid #desiredBorderColor'
+    border-bottom: '1px solid #fff'; // Remove border or set to '1px solid #desiredBorderColor'
     -webkit-animation: intro 0.3s both;
             animation: intro 0.3s both;
     -webkit-animation-delay: 0.15s;
