--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -25,8 +25,8 @@
 <style>
 
   .masthead {
-    background-color: #274865; /* Footer background color */
-    color: white; /* Text color in the footer */
+    background-color: #274865;
+    color: white; 
     border-bottom: 1px solid #fff; 
   }
 
@@ -35,8 +35,19 @@
   }
 
   .masthead__inner-wrap nav {
-    background-color: #274865; /* Footer background color */
-    color: white; /* Text color in the footer */
+    background-color: #274865;
+    color: white;
     z-index: 10;
   }
+</style>
+
+<style>
+  
+  .masthead a, /* This targets all <a> elements within .masthead */
+  .masthead__inner-wrap a, /* This targets all <a> elements within .masthead__inner-wrap */
+  .masthead__inner-wrap nav a { /* This targets all <a> elements within nav */
+    color: white; /* Text color for the links */
+  }
+
+  /* Other styles */
 </style>
