--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
     .page__footer {
       background-color: #274865; /* Footer background color */
       color: white; /* Text color in the footer */
+      border-top: 1px solid #fff;
     }
   </style>
 
