--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,14 @@
 layout: compress
 ---
 
+<style>
+  body {
+    background-color: #00101e;
+    color: white;
+  }
+</style>
+
+
 {% include base_path %}
 
 <!doctype html>
