--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -2,6 +2,14 @@
 layout: default
 ---
 
+<style>
+  body {
+    background-color: #00101e;
+    color: white;
+  }
+</style>
+
+
 {% include base_path %}
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
