--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -9,6 +9,14 @@ layout: default
   }
 </style>
 
+<style>
+
+  .masthead__menu-item a:hover {
+  color: #000000; 
+  }
+
+</style>
+
 
 {% include base_path %}
 
