--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -56,6 +56,8 @@
 
   .masthead__menu-item a:hover {
   color: #000000; 
+  text-decoration: underline;
+  text-decoration-color: #000000; 
   }
 
 </style>
