--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -13,6 +13,8 @@ layout: default
 
   .masthead__menu-item a:hover {
   color: #000000; 
+  text-decoration: underline;
+  text-decoration-color: #000000; 
   }
 
 </style>
