--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -46,6 +46,7 @@
     display: block;
     list-style-type: none;
     white-space: nowrap;
+    background-color: #000000;
   
     &--lg {
       padding-right: 2em; // Adjust or remove padding as needed
