--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -52,11 +52,26 @@
   /* Other styles */
 </style>
 
-<style>
+  .masthead__menu-item a {
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+    
+    &::after {
+      content: '';
+      display: block;
+      margin: auto;
+      height: 2px;
+      width: 0;
+      background: transparent;
+      transition: width 0.5s ease, background-color 0.5s ease;
+    }
 
-  .masthead__menu-item a:hover {
-  color: #000000;  
-  }
+    &:hover::after {
+      width: 100%;
+      background: #000000; // Your desired underline color
+    }
+    
+}
 
-</style>
 
