--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -52,6 +52,8 @@
   /* Other styles */
 </style>
 
+<style>
+
   .masthead__menu-item a {
     position: relative;
     display: inline-block;
@@ -71,7 +73,8 @@
       width: 100%;
       background: #000000; // Your desired underline color
     }
+  }
     
-}
+</style>
 
 
