--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -71,7 +71,7 @@
 
     &:hover::after {
       width: 100%;
-      background: #000000; // Your desired underline color
+      background: #000000; 
     }
   }
     
