--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -55,8 +55,17 @@
 <style>
 
   .masthead__menu-item a:hover {
-  color: #000000; 
+    color: #000000; 
   }
 
 </style>
+
+<style>
+
+  .greedy-nav .visible-links a:before {
+    background: red;
+  }
+
+</style>
+
 
