--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -17,6 +17,14 @@ layout: default
 
 </style>
 
+<style>
+
+  .greedy-nav .visible-links a:before {       /* modifies the animated page link underline */
+    background: red;                       
+  }
+
+</style>
+
 
 {% include base_path %}
 
