--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -25,7 +25,7 @@
 <style>
 
   .masthead {
-    background-color: #274865;
+    background-color: #274865;          /* modifying masthead total block */
     color: white; 
     border-bottom: 1px solid #fff; 
   }
@@ -46,7 +46,7 @@
   .masthead a, /* This targets all <a> elements within .masthead */
   .masthead__inner-wrap a, /* This targets all <a> elements within .masthead__inner-wrap */
   .masthead__inner-wrap nav a { /* This targets all <a> elements within nav */
-    color: white; /* Text color for the links */
+    color: white; /* Text color for the page links */
   }
 
   /* Other stylessssssss */
@@ -55,15 +55,15 @@
 <style>
 
   .masthead__menu-item a:hover {
-    color: #000000; 
+    color: #000000;                   /* modifies the hovered page link text */
   }
 
 </style>
 
 <style>
 
-  .greedy-nav .visible-links a:before {
-    background: red;
+  .greedy-nav .visible-links a:before {       /* modifies the animated page link underline */
+    background: white;                       /* must be applied separately to the homepage layout (single.html) */
   }
 
 </style>
