--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -32,6 +32,7 @@
 
   .masthead__inner-wrap {
     color: #fff;
+    margin-left: 50px;
   }
 
   .masthead__inner-wrap nav {
@@ -67,5 +68,4 @@
   }
 
 </style>
-
 
