--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -20,7 +20,7 @@ layout: default
 <style>
 
   .greedy-nav .visible-links a:before {       /* modifies the animated page link underline */
-    background: red;                       
+    background: white;                       
   }
 
 </style>
