--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,12 @@
       color: white; /* Text color in the footer */
       border-top: 1px solid #fff;
     }
+
+    .page__footer footer {
+      margin-left: 50px;
+      padding-left: 0em;
+      padding-right: 0em;
+    }
   </style>
 
 <div class="footer">
