--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,13 @@
       padding-left: 0em;
       padding-right: 0em;
     }
+
+    @media only screen and (max-width: 768px) { /* This targets screens with a width of 768px or less */
+    .page__footer footer {
+      margin-left: 0; /* This removes the left margin on mobile */
+    }
+    }
+
   </style>
 
 <div class="footer">
