mobile_left_margin_headfoot

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -35,6 +35,12 @@
     margin-left: 50px;
   }
 
+  @media only screen and (max-width: 768px) { /* This targets screens with a width of 768px or less */
+    .masthead__inner-wrap {
+      margin-left: 20px; /* This modifies the left margin on mobile */
+    }
+  }
+
   .masthead__inner-wrap nav {
     background-color: #274865;
     color: white;
