--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,9 +14,9 @@
     }
 
     @media only screen and (max-width: 768px) { /* This targets screens with a width of 768px or less */
-    .page__footer footer {
-      margin-left: 0; /* This removes the left margin on mobile */
-    }
+      .page__footer footer {
+        margin-left: 20px; /* This modifies the left margin on mobile */
+      }
     }
 
   </style>
