--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -233,6 +233,10 @@ body:hover .visually-hidden button {
     color: $linkedin-color;
   }
 
+  .fa-map-marker {
+    color: lightblue;
+  }
+
   .fa-pinterest,
   .fa-pinterest-p,
   .fa-pinterest-square {
