--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -62,7 +62,7 @@
 <style>
 
   .masthead__menu-item a:hover {
-    color: #000000;                   /* modifies the hovered page link text */
+    color: lightblue;                   /* modifies the hovered page link text */
   }
 
 </style>
