--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -4,7 +4,7 @@ layout: default
 
 <style>
   body {
-    background-color: #002240;
+    background-color: #00101e;
     color: white;
   }
 </style>
