--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -25,6 +25,20 @@ layout: default
 
 </style>
 
+<style>
+  ::selection {
+    background: lightblue; /* Background color of highlighted text */
+    /* color: #textColor; Text color of highlighted text */
+  }
+
+  /* For Mozilla Firefox */
+  ::-moz-selection {
+    background: lightblue; /* Background color of highlighted text */
+    /* color: #textColor; Text color of highlighted text */
+  }
+</style>
+
+
 
 {% include base_path %}
 
