--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<link rel="icon" type="image/png" href="/images/home.png">
+
 <style>
   body {
     background-color: #00101e;
